Fix invisible snack in Odysee Light Theme

--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -138,7 +138,6 @@
   --color-view-icon: var(--color-secondary);
 
   // Snack
-  --color-snack-bg: var(--color-success);
   --color-snack: var(--color-white);
   --color-snack-bg-error: var(--color-danger);
   --color-snack-upgrade: var(--color-tertiary);
